<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/login_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMainLogin"
        app:layout_constraintStart_toStartOf="@+id/imageViewMainLogin"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMainLogin" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/senha"
        android:inputType="textPassword|numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <Button
        android:id="@+id/buttonLoginMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="@+id/editTextSenha"
        app:layout_constraintStart_toStartOf="@+id/editTextSenha"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

    <ImageView
        android:id="@+id/imageViewMainLogin"
        android:layout_width="0dp"
        android:layout_height="158dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo" />

    <TextView
        android:id="@+id/textViewEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/esqueceu_senha"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginMain"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginMain" />

    <TextView
        android:id="@+id/textViewCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cria_nova_conta"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginMain"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginMain" />

    <Button
        android:id="@+id/buttonExitMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Exit"
        app:layout_constraintEnd_toEndOf="@+id/textViewCriarConta"
        app:layout_constraintStart_toStartOf="@+id/textViewEsqueceuSenha"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsqueceuSenha" />
</androidx.constraintlayout.widget.ConstraintLayout>