<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarNovoUsuarioActivity">

    <ImageView
        android:id="@+id/imageViewCriarConta"
        android:layout_width="0dp"
        android:layout_height="158dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo" />

    <EditText
        android:id="@+id/editTextCriarContaEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCriarConta"
        app:layout_constraintStart_toStartOf="@+id/imageViewCriarConta"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCriarConta" />

    <EditText
        android:id="@+id/editTextCriarContaSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/senha"
        android:inputType="textPassword|numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextCriarContaEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextCriarContaEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextCriarContaEmail" />

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_criar_conta"
        app:layout_constraintEnd_toEndOf="@+id/editTextCriarContaSenha"
        app:layout_constraintStart_toStartOf="@+id/editTextCriarContaSenha"
        app:layout_constraintTop_toBottomOf="@+id/editTextCriarContaSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>